# 2048_impala

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  action.hpp  agent.hpp  environment.hpp  loss.hpp  main.cpp  python_agent.hpp  python_util.hpp  server.hpp  tensor.hpp
agents/: __init__.py  impala.py
cuda/: cuda_memory.cu  cuda_util.hpp
envs/g2048/: g2048_env.cpp  g2048_env.hpp
functions/: __init__.py  softmax.py
models/: g2048_a3c_model.py  model.py
viewer/: color.hpp  gl_util.cpp  gl_util.hpp  load_png.cpp  load_png.hpp  texture.cpp  texture.hpp  window.hpp
